# gameboy-emu

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
crates/gameboy-core/: Cargo.toml
crates/gameboy-core/examples/: dump_frame.rs  run_test_rom.rs  run_test_suite.rs
crates/gameboy-core/src/: apu.rs  bus.rs  cartridge.rs  cpu.rs  emulator.rs  error.rs  joypad.rs  lib.rs  memory.rs  serial.rs  test_harness.rs
crates/gameboy-core/src/ppu/: mod.rs
crates/gameboy-core/tests/: test_roms.rs
crates/gameboy-frontend/: Cargo.toml
crates/gameboy-frontend/src/: app.rs  audio.rs  browser.rs  config.rs  input.rs  library.rs  main.rs  renderer.rs  session.rs  states.rs  theme.rs
