[package]
name = "gameboy-frontend"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
gameboy-core = { path = "../gameboy-core" }
eframe = { version = "0.35", default-features = false, features = ["glow", "persistence"] }
egui = "0.35"
serde = { version = "1", features = ["derive"] }
bincode = "1"
cpal = "0.15"
gilrs = "0.11"
